--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alkalami">
     -->
     
-    <title> <!-- title goes here --> </title>
+    <title>Animation Test</title>
 </head>
 <body>
+
+    <main class="parent">
+        <div class="child"></div>
+    </main>
 
 <script src="js/app.js"></script>
 </body>
